update image sizes

--- a/projects/StarTrails/overview.html
+++ b/projects/StarTrails/overview.html
@@ -72,7 +72,10 @@
 							<h1>Star Trails</h1>
 							<h2 id="mission-stmt">Mission Statement</h2>
 							<div class="MuiBox-root css-m507i9">
-								<p class="MuiTypography-root MuiTypography-body1 css-lj8hfv">Our mission is to provide satisfactory results to our clients through open communication, punctuality, and dedication. We strive to complete our projects on time, and create the best user experience for small business and their customers.</p>
+								<p class="MuiTypography-root MuiTypography-body1 css-lj8hfv">Our mission is to provide
+									satisfactory results to our clients through open communication, punctuality, and
+									dedication. We strive to complete our projects on time, and create the best user
+									experience for small business and their customers.</p>
 							</div>
 
 							<h2 id="team-members">Team Members</h2>
@@ -129,24 +132,28 @@
 
 								<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8 css-1718kzu">
 									Tourism in Montana should help the economy grow throughout the entire state.
-										However, some parts of the state are virtually untouched by tourists. For example, the
-										Western part of the state has significantly more tourism than the rest of Montana.
-										This means that the economy will only thrive in those parts of the state while the rest
-										of rural Montana will have to compete for business. In fact, there is so much to
-										explore in Montana like the history, the culture, and all the outdoor recreation you can
-										think of. The problem is that tourists don’t have any idea what there is to offer aside
-										from what is already popular or trending. The idea is to connect tourists who don’t
-										know what to do throughout Montana with the communities that know exactly what
-										there is to offer.
+									However, some parts of the state are virtually untouched by tourists. For example,
+									the
+									Western part of the state has significantly more tourism than the rest of Montana.
+									This means that the economy will only thrive in those parts of the state while the
+									rest
+									of rural Montana will have to compete for business. In fact, there is so much to
+									explore in Montana like the history, the culture, and all the outdoor recreation you
+									can
+									think of. The problem is that tourists don’t have any idea what there is to offer
+									aside
+									from what is already popular or trending. The idea is to connect tourists who don’t
+									know what to do throughout Montana with the communities that know exactly what
+									there is to offer.
 
 								</div>
 
 							</div>
 
 
-							
 
-								</div>
+
+						</div>
 
 </body>
 
