Updated logo for each page

--- a/projects/StarTrails/overview.html
+++ b/projects/StarTrails/overview.html
@@ -11,6 +11,14 @@
 	<link rel="stylesheet" href="../../assets/css/wa_style.css">
 	<link rel="stylesheet" href="../../assets/css/navstyle.css">
 	<link href="https://fonts.gstatic.com" rel="preconnect">
+	<style>
+		img {
+			float: left;
+			width: 150px;
+			height: 150px;
+			object-fit: cover;
+		}
+	</style>
 </head>
 
 <body>
@@ -88,7 +96,7 @@
 											<a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1td92wh"
 												href="./projects/project_detail.html">
 												<div class="css-j7qwjs">Charles Werk<img src="./images/charles.jpg"
-														alt="Photo of Charles Werk" width="150">
+														alt="Photo of Charles Werk">
 												</div>
 											</a>
 										</div>
@@ -102,7 +110,7 @@
 											<a
 												class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1td92wh">
 												<div class="css-j7qwjs">Paige Johnson<img src="./images/paige.png"
-														alt="Photo of Paige Johnson" width="150">
+														alt="Photo of Paige Johnson">
 												</div>
 											</a>
 										</div>
@@ -116,7 +124,7 @@
 											<a
 												class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1td92wh">
 												<div class="css-j7qwjs">John Boyle<img src="./images/john.png"
-														alt="Photo of John Boyle" width="150">
+														alt="Photo of John Boyle">
 												</div>
 											</a>
 										</div>
