--- a/projects/StarTrails/reqs_spec.html
+++ b/projects/StarTrails/reqs_spec.html
@@ -12,12 +12,21 @@
 	<link rel="stylesheet" href="../../assets/css/navstyle.css">
 	<link href="https://fonts.gstatic.com" rel="preconnect">
 	<style>
-	table, th, td {
-  		border: 1px solid black;
-  		border-collapse: collapse;
-	}
-	th {background-color: lightblue;}
-	td {padding: 15px; font-size: 14px;}
+		table,
+		th,
+		td {
+			border: 1px solid black;
+			border-collapse: collapse;
+		}
+
+		th {
+			background-color: lightblue;
+		}
+
+		td {
+			padding: 15px;
+			font-size: 14px;
+		}
 	</style>
 </head>
 
@@ -29,7 +38,7 @@
 		<div id="root">
 
 			<div class="sidenav">
-				<img src="../../assets/img/ATG_logo.png" width="110" height="110"
+				<img src="../../assets/img/star_trails_logo.png" width="110" height="110"
 					style="padding-left: 10px; padding-top: 0px;">
 				<a href="./overview.html">Overview</a>
 				<a href="./user_feedback.html">User Feedback</a>
@@ -80,54 +89,62 @@
 							<h1>Star Trails</h1>
 							<h2 id="mission-stmt">Requirements Specification</h2>
 							<div class="MuiBox-root css-m507i9">
-								<p class="MuiTypography-root MuiTypography-body1 css-lj8hfv">Using the feedback we gathered from our end users as described in the Early Design section of this site, we then set out to define, categorize and prioritize the requirments for our system. The following tables highlights the highest priority functional requirements, data requirements, software and hardware requirements. Note that 1 represents the highest priority and 5 represents the lowest priority.</p>
+								<p class="MuiTypography-root MuiTypography-body1 css-lj8hfv">Using the feedback we
+									gathered from our end users as described in the Early Design section of this site,
+									we then set out to define, categorize and prioritize the requirments for our system.
+									The following tables highlights the highest priority functional requirements, data
+									requirements, software and hardware requirements. Note that 1 represents the highest
+									priority and 5 represents the lowest priority.</p>
 								<br>
 
 								<table>
-									<caption style="color: darkblue; font-size: 20px;"> Functional Requirements</caption>
- 									<tr>
-    									<th>Category</th>
-    									<th>Description</th>
-    									<th>Priority</th>
-  									</tr>
-  									<tr>
-    									<td>Leaderboard</td>
-    									<td>Users should be able to view a leaderboard.</td>
-    									<td>1</td>
-  									</tr>
-  
+									<caption style="color: darkblue; font-size: 20px;"> Functional Requirements
+									</caption>
+									<tr>
+										<th>Category</th>
+										<th>Description</th>
+										<th>Priority</th>
+									</tr>
+									<tr>
+										<td>Leaderboard</td>
+										<td>Users should be able to view a leaderboard.</td>
+										<td>1</td>
+									</tr>
+
 								</table>
 								<br>
 								<br>
 								<table>
 									<caption style="color: darkblue; font-size: 20px;"> Data Requirements</caption>
- 									<tr>
-    									<th>Category</th>
-    									<th>Description</th>
-    									<th>Priority</th>
-  									</tr>
-  									<tr>
-    									<td>Profile</td>
-    									<td>User name and password.</td>
-    									<td>1</td>
-  									</tr>
-  
+									<tr>
+										<th>Category</th>
+										<th>Description</th>
+										<th>Priority</th>
+									</tr>
+									<tr>
+										<td>Profile</td>
+										<td>User name and password.</td>
+										<td>1</td>
+									</tr>
+
 								</table>
 								<br>
-								<p><h3 style="color: darkblue; font-size: 20px;">Hardware and Software requirements</h3>
-									We also indentied the following initial hardware and software requirements for our system:
-									<ul>
-										<li> Req 1 </li>
-										<li> Req 2 </li>
-										<li> Req 3 </li>
-									</ul>
+								<p>
+								<h3 style="color: darkblue; font-size: 20px;">Hardware and Software requirements</h3>
+								We also indentied the following initial hardware and software requirements for our
+								system:
+								<ul>
+									<li> Req 1 </li>
+									<li> Req 2 </li>
+									<li> Req 3 </li>
+								</ul>
 								</p>
 
 
 
 							</div>
 
-								</div>
+						</div>
 
 </body>
 
