--- a/projects/StarTrails/user_feedback.html
+++ b/projects/StarTrails/user_feedback.html
@@ -21,7 +21,7 @@
 		<div id="root">
 
 			<div class="sidenav">
-				<img src="../../assets/img/ATG_logo.png" width="110" height="110"
+				<img src="../../assets/img/star_trails_logo.png" width="110" height="110"
 					style="padding-left: 10px; padding-top: 0px;">
 				<a href="./overview.html">Overview</a>
 				<a href="./user_feedback.html">User Feedback</a>
@@ -69,66 +69,90 @@
 						<div class="MuiBox-root css-qwy28t" role="main">
 
 
-						<h1>User Feedback</h1>
-					
-						<p>The primary focus of our early design was to determine what users would expect from our app based on the concept alone. We wanted to know what tools the user
-							would want to be equipped with in order to achieve whichever goal they had in mind when they downloaded our hypothetical app. Overall 
-						we were looking at features which needed to be added, and how they could be placed within our application in an appealing manner. </p>
+							<h1>User Feedback</h1>
 
-						<h2>Method</h2>
-						<p>    Our method of gathering early feedback was a combination of in class constructive feedback activities, and questionnaires to potential users. 
-							These questionnaires were given out via a Google Forms document as this makes it not only easy to get to potential users, but google forms provides also 
-							analysis tools which make gathering feedback and drawing conclusions more straightforward.  </p>
+							<p>The primary focus of our early design was to determine what users would expect from our
+								app based on the concept alone. We wanted to know what tools the user
+								would want to be equipped with in order to achieve whichever goal they had in mind when
+								they downloaded our hypothetical app. Overall
+								we were looking at features which needed to be added, and how they could be placed
+								within our application in an appealing manner. </p>
 
-						<img src="./images/feedbackSS1.png" style="max-height:400px;max-width:100%">
+							<h2>Method</h2>
+							<p> Our method of gathering early feedback was a combination of in class constructive
+								feedback activities, and questionnaires to potential users.
+								These questionnaires were given out via a Google Forms document as this makes it not
+								only easy to get to potential users, but google forms provides also
+								analysis tools which make gathering feedback and drawing conclusions more
+								straightforward. </p>
 
-						<h2>Sample Questions</h2>
-						<p>    The questions we gave users were geared towards finding out how they would use our application and how they were currently dealing with the problem we were trying to solve. 
-							We aimed to figure out how they were currently discovering local music, if they were satisfied with their current methods, and how they would intend to use our application based on a
-							 short prompt describing what our proposed app would look like. We wanted to know how users planned to utilize our application, in order to be able to design giggle with our users' experience in mind.
-							Some sample questions from our feedback sessions are included below:  </p>
-						<ul>
-							<li><i>“How do you normally discover live music events in your area?”</i></li>
-							<li><i>“Are you satisfied with the options for discovery that are currently available?”</i></li>
-							<li><i>“Would you be interested in using an app to more easily find people to jam with?”</i></li>
+							<img src="./images/feedbackSS1.png" style="max-height:400px;max-width:100%">
 
-						</ul>
+							<h2>Sample Questions</h2>
+							<p> The questions we gave users were geared towards finding out how they would use our
+								application and how they were currently dealing with the problem we were trying to
+								solve.
+								We aimed to figure out how they were currently discovering local music, if they were
+								satisfied with their current methods, and how they would intend to use our application
+								based on a
+								short prompt describing what our proposed app would look like. We wanted to know how
+								users planned to utilize our application, in order to be able to design giggle with our
+								users' experience in mind.
+								Some sample questions from our feedback sessions are included below: </p>
+							<ul>
+								<li><i>“How do you normally discover live music events in your area?”</i></li>
+								<li><i>“Are you satisfied with the options for discovery that are currently
+										available?”</i></li>
+								<li><i>“Would you be interested in using an app to more easily find people to jam
+										with?”</i></li>
+
+							</ul>
 
 
-						<h2">Key Insights</h2>
+							<h2">Key Insights</h2>
 
-						<p>
-							<b>1. Users seemed to favor more of a social media aspect to our application </b><br>
-							While giggle's aim is to provide a platform to find local music, bands, and musicians user 
-							pointed out that this could be achieved in a social media type app. Not only did they want to find local music, 
-							but they also wanted to be able to share that experience with their friends through giggle.  
-						</p>
+								<p>
+									<b>1. Users seemed to favor more of a social media aspect to our application
+									</b><br>
+									While giggle's aim is to provide a platform to find local music, bands, and
+									musicians user
+									pointed out that this could be achieved in a social media type app. Not only did
+									they want to find local music,
+									but they also wanted to be able to share that experience with their friends through
+									giggle.
+								</p>
 
-						<p><b>2. Not all of our initial ideas were going to make the final cut</b><br>
-						During initial discussion of our application, some potential functionality was planned that was either out of the scope of this project,
-							or undesired among potential users. 
-						</p>
+								<p><b>2. Not all of our initial ideas were going to make the final cut</b><br>
+									During initial discussion of our application, some potential functionality was
+									planned that was either out of the scope of this project,
+									or undesired among potential users.
+								</p>
 
-						<p>
-							<b>3. There was no current option for finding music that was agreed upon by all users </b><br>
-							Based off of user feedback, there was no clear one option currently available for finding local music events. Most current options 
-							appeared to be posted by vague groups on already established social media platforms, and word of mouth.
-						</p>	
+								<p>
+									<b>3. There was no current option for finding music that was agreed upon by all
+										users </b><br>
+									Based off of user feedback, there was no clear one option currently available for
+									finding local music events. Most current options
+									appeared to be posted by vague groups on already established social media platforms,
+									and word of mouth.
+								</p>
 
-<div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1tz8m30">
-	<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-gp0h3g">
-		<div class="MuiBox-root css-1vp8jwk">
-			<div class="MuiBox-root css-1vp8jwk">
-				<div class="MuiBox-root css-1j8t7mm">
-					<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lnqg4h">
-						<img src="./images/feedbackSS2.png" style="max-height:400px;max-width:100%">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+								<div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1tz8m30">
+									<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-gp0h3g">
+										<div class="MuiBox-root css-1vp8jwk">
+											<div class="MuiBox-root css-1vp8jwk">
+												<div class="MuiBox-root css-1j8t7mm">
+													<div
+														class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lnqg4h">
+														<img src="./images/feedbackSS2.png"
+															style="max-height:400px;max-width:100%">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
 
-</div>
+								</div>
 
 </body>
 
