Updated first half of this page

--- a/projects/StarTrails/storyboard.html
+++ b/projects/StarTrails/storyboard.html
@@ -75,8 +75,15 @@
 								<p class="MuiTypography-root MuiTypography-body1 css-lj8hfv">Using the information we
 									gathered from our users and the resulting list of high-priority functional
 									requirements we subsequently indentified, we then set our to create a low-fidelity
-									prototype. This initial prototype, or storyboard, is useful to create because it
-									....</p>
+									prototype. Using pen and paper, our team created different sketches on what we as a
+									development team believe our app should look like. The Low-Fidelity Prototyping
+									phase is incredibly useful for our
+									development cycle, as it allows us to brainstorm different conceptual ideas we may
+									have onto paper and gather feedback on which design aspects may work the best for
+									our application. Although this level of prototyping is useful for early user
+									interface brainstorming, we are constrained on basic interface functionality and
+									general operating systems look and feel.
+								</p>
 								<p>Below are some annotated sketches of our low-fidelity prototype. They illustrate ...
 
 								</p>
@@ -88,23 +95,33 @@
 									<div class="MuiBox-root css-1j8t7mm">
 										<div
 											class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lnqg4h">
-											<center><img src="./images/PrototypeEvent.png"
-													style="max-height:400px;max-width:100%">
-												<img src="./images/eventSSDalton.png"
-													style="max-height:400px;max-width:100%">
+											<center style="display: flex; flex-direction: row; flex-wrap: wrap;"><img
+													src="./images/Register.jpeg" style="max-height:300px;max-width:33%">
+												<img src="./images/johnLogin.png"
+													style="max-height:300px;max-width:33%">
+												<img src="./images/paigeLogin.png"
+													style="max-height:300px;max-width:33%">
 											</center>
 											<figcaption style="font-size: 14px;">
-												<center><em>Home Page Sketch (event list view)</em></center>
+												<center><em>Login and Registration pages.</em></center>
 											</figcaption>
 
+
+											<p>
+												Above are the first of the similarities in our designs, which is the
+												login and registration pages. It is no surprise that they are similar
+												because it is pretty standard
+												and everyone is probably used to them by now.
+											</p>
 											<center><img src="./images/eventPage.png"
 													style="max-height:400px;max-width:100%"></center>
 											<figcaption style="font-size: 14px;">
-												<center><em>Events Page Sketches</em></center>
+												<center><em>Home Page Sketches</em></center>
 											</figcaption>
-											<p>Both of the above home page sketches are each of our initial thoughts on
-												how our main page should look.
-												We saw a lot of early similarities that we decided to keep in our design
+											<p>
+												Here is where I designs start to diverge, but we still have similar
+												ideas but with different placement and styles for our elements. Here are
+												a few examples:
 											</p>
 											<ul>
 												<li>A location indicator at the top of the screen</li>
