--- a/projects/StarTrails/storyboard.html
+++ b/projects/StarTrails/storyboard.html
@@ -84,8 +84,14 @@
 									interface brainstorming, we are constrained on basic interface functionality and
 									general operating systems look and feel.
 								</p>
-								<p>Below are some annotated sketches of our low-fidelity prototype. They illustrate ...
 
+								<h2>Individual Sketches</h2>
+
+								<p>
+									Below you'll find the individual annotated sketches of our low-fidelity prototype.
+									They illustrate the
+									start of what our app might look like and includes functionality that is described
+									in our requirements specification documentation.
 								</p>
 							</div>
 
@@ -108,42 +114,121 @@
 
 
 											<p>
-												Above are the first of the similarities in our designs, which is the
-												login and registration pages. It is no surprise that they are similar
-												because it is pretty standard
-												and everyone is probably used to them by now.
+												Above are the login/registration page since they are the easiest to
+												create. It is
+												no surprise that they are similar because it is pretty standard
+												and everyone is probably used to them by now. However, you can already
+												see the
+												different styles that we had in mind.
 											</p>
-											<center><img src="./images/eventPage.png"
-													style="max-height:400px;max-width:100%"></center>
+
+											<center
+												style="display: flex; flex-direction: row; flex-wrap: wrap; padding: 2px">
+												<img src="./images/HomeMap.jpeg" style="max-height:300px;max-width:33%">
+												<img src="./images/johnHome.png" style="max-height:300px;max-width:33%">
+												<img src="./images/paigeHome.png"
+													style="max-height:300px;max-width:33%">
+											</center>
+
 											<figcaption style="font-size: 14px;">
 												<center><em>Home Page Sketches</em></center>
 											</figcaption>
 											<p>
-												Here is where I designs start to diverge, but we still have similar
-												ideas but with different placement and styles for our elements. Here are
-												a few examples:
+												Here is where our designs start to diverge. We have similar
+												ideas but with different placements and styles for our elements. Here
+												are a few examples of similarities:
 											</p>
+
 											<ul>
-												<li>A location indicator at the top of the screen</li>
-												<li>Hamburger menu on the top right of the screen</li>
-												<li>Block elements for each event listing</li>
+												<li>A map view that shows all the stargazing locations centered on
+													Montana</li>
+												<li>Buttons to denote overlays for the map</li>
+												<li>Bottom element for discovery of sites or navigation</li>
+												<li>Profile button to view personal information</li>
 											</ul>
-											<p>We decided that the first design (pictured on the upper left) had all of
-												the aspects that
-												we wanted to include in our prototype. We set out to follow that design,
-												and determine later on
-												whether or not we wanted to make changes to the initial sketches. This
-												initial design had some more
-												functionality that we wanted to see included, such as the navigation bar
-												at the bottom and a better
-												utilization of space from the event blocks. The bottom sketches are what
-												the user would see when
-												they clicked on eny given event. The event view would later house some
-												of the most important information
-												on the app. The main goal is to give users a place to find events, and
-												we decided that we
-												wanted to implement these early sketches into our app.
+
+											<p>
+												We decided that the image on the left had great icons for overlay
+												buttons. The overlays are useful for users to be able to locate
+												the best locations to stargaze at a glance. For the image in the center
+												we agreed on the navigation system at the bottom so users can navigate
+												our site with ease. Finally, the last two images had less of a map view
+												which allowed us to fit more content including the navigation system
+												at the bottom. For the rest of our interface, we thought it was better
+												to split it up into separate pages or moved to other pages.
 											</p>
+
+											<h2>
+												Final Designs
+											</h2>
+
+											<p>
+												Here are the final designs for our low-fidelity prototype which includes
+												elements from all of our individual sketches. The biggest challenge was
+												to figure out how to fit all our information on the pages we had or to
+												create new pages. We have a lot of information available that we can
+												provide and would be useful for most of our users, but we don't have as
+												much space as we would like. Thankfully, we have a creative team and was
+												able to add just about everything to our final design.
+											</p>
+											<center>
+												<figcaption style="font-size: 14px;">
+													<center><em>Splash Screen: The first thing our users see after
+															downloading the app.</em></center>
+												</figcaption>
+												<img src="./images/splash.png" style="max-height:400px;max-width:100%">
+												<figcaption style="font-size: 14px;">
+													<center><em>Login/Register: We have users login or create an account
+															to get the most out of their experience with our app</em>
+													</center>
+												</figcaption>
+												<img src="./images/teamLogin.png"
+													style="max-height:400px;max-width:100%">
+												<figcaption style="font-size: 14px;">
+													<center><em>Home Screen: The main page that our users will interact
+															with when using the Startrails app.</em>
+													</center>
+												</figcaption>
+												<img src="./images/home1.png" style="max-height:400px;max-width:100%">
+												<figcaption style="font-size: 14px;">
+													<center><em>Profile page: Users will be able to see their history
+															and update their information.</em>
+													</center>
+												</figcaption>
+												<img src="./images/profile1.png"
+													style="max-height:400px;max-width:100%">
+												<figcaption style="font-size: 14px;">
+													<center>
+														<em>
+															Discovery page: Users will be able discover potential
+															stargazing sites, featured sites, and other features.
+														</em>
+													</center>
+												</figcaption>
+												<img src="./images/discovery.png"
+													style="max-height:400px;max-width:100%">
+												<figcaption style="font-size: 14px;">
+													<center>
+														<em>
+															Stargazing site details: A page dedicated to a single
+															stargazing site upon viewing interaction with a site on the
+															map
+														</em>
+													</center>
+												</figcaption>
+												<img src="./images/site_details.png"
+													style="max-height:400px;max-width:100%">
+												<figcaption style="font-size: 14px;">
+													<center>
+														<em>
+															Review page: Users can leave reviews on the site that they
+															have visited recently.
+														</em>
+													</center>
+												</figcaption>
+												<img src="./images/review.png" style="max-height:400px;max-width:100%">
+											</center>
+
 										</div>
 									</div>
 								</div>
